# Trabajo-Terminal

./: .gitignore  LICENSE  README.md  indice_documento_tt1.md
flowdiagramapp/: .gitignore  ARCHITECTURE_DOCUMENTATION.md  CHANGELOG.md  CHECKLIST_VALIDACION.md  COMMENT_NODE_VALIDATION.md  COMPILER_DOCUMENTATION.md  CONNECTOR_NODE_VALIDATION.md  DATABASE_DOCUMENTATION.md  DOCUMENTACION_TECNICA_METADATA.md  EJEMPLO_CODIGO_BUCLE.c  EXERCISES_IMPLEMENTATION_SUMMARY.md  EXERCISE_SYSTEM_README.md  EXTRAS.md  FASE_3_DETECCION_INTELIGENTE.md  FASE_4_PRUEBAS_COMPLETADAS.md  FASE_5_DOCUMENTACION_COMPLETADA.md  FUNCIONALIDAD_10_README.md  FUNCIONALIDAD_6_README.md  FUNCIONALIDAD_7_README.md  FUNCIONALIDAD_8_README.md  FUNCIONALIDAD_9_EXPORTACION.md  GUIA_ESTRUCTURAS_CONTROL.md  GUIA_RAPIDA_PLANTILLAS.md  INTEGRACION_METRICAS.md  ISO_5807_SYMBOLS.md  LOOP_NODE_VALIDATION.md  MEJORAS_NODOS_DECISION_PREPARACION.md  MEJORAS_NODOS_ENTRADA_SALIDA.md  MEJORAS_NODO_DECISION.md  MEJORAS_NODO_PROCESO.md  MEJORAS_NODO_VARIABLE.md  METADATA_KEYS_DOCUMENTATION.md  MODO_INVITADO.md  OPTIMIZACION_CANVAS_README.md  PLANTILLAS_SIMBOLOS.md  README.md  RESUMEN_PLANTILLAS_NUEVAS.md  RESUMEN_SIMBOLO_3_CONECTOR.md  RESUMEN_SIMBOLO_6_COMENTARIO.md  RESUMEN_SIMBOLO_SUBPROCESO.md  (+11 more)
flowdiagramapp/android/app/: build.gradle.kts  google-services.json
flowdiagramapp/android/app/src/main/cpp/: CMakeLists.txt  android_stubs.c  flowcode_runner.c  flowcode_runner.h  flowcode_stdio_android.c  flowcode_stdlib_android.c  picoc_platform_android.c  string_android.c
flowdiagramapp/docs/: Criticas.md  Cronograma_Segundo_Semestre.xlsx  Cronograma_Segundo_Semestre_Actualizado.xlsx  Draft_Cronograma_Segundo_Semestre.xlsx  FORMATO DE SEGUIMIENTO DE TRABAJO TERMINAL_26_2.docx  Metodologia_espiral_ciclos.md  PANTALLAS_IMPLEMENTADAS.md  RF_RNF.md  Reporte_Pruebas_Integracion_tecnico.md  casos_de_uso_tablas.md  ccCronograma_FlowCode_TT_2026-A038.csv  ccCronograma_FlowCode_TT_2026-A038.xlsx  convert_cronograma.py  fundamentosProgramacion_ISC2020.md  indice_ciclo_4tt2.md  indice_tt2.md  normasReferenciaIEEE.md  protocoloTT_FlowCode_2026-A038_007.md  pruebas_casos_de_uso.md  referencias.md  seccion_10_pantallas_principales.md  tema_18_sistema_errores.md  tema_19_nodos_ast.md  tema_21_generacion_codigo.md  tema_23_pruebas_integracion.md  updates.md  walkthrough.md.resolved  ~$abajo_Terminal_2026_A038_FlowCode.docx
flowdiagramapp/docs/TT_Seguimiento/: FORMATO DE SEGUIMIENTO DE TRABAJO TERMINAL_26_2_UPDATED.docx  ~$RMATO DE SEGUIMIENTO DE TRABAJO TERMINAL_26_2_UPDATED.docx
flowdiagramapp/docs/attemps/: AGENT.md  CLAUDE_CODE_C_RUNNER.md  NULL_SAFETY_FIX_GUIDE.md  implementation_plan.md  plan-cExecutionTerminal.prompt.md
flowdiagramapp/docs/ciclo_1/: Metodologia_espiral_ciclos.md  casos_de_uso_tablas.md  (+2 more)
flowdiagramapp/ios/: GoogleService-Info.plist
flowdiagramapp/lib/: firebase_options.dart  main.dart
flowdiagramapp/linux/: CMakeLists.txt
flowdiagramapp/logs/: ciclo7_TODOS_84_TESTS.txt
flowdiagramapp/scratch/: load_diagram_screen_draft.dart
flowdiagramapp/scripts/: run_test_reports.ps1
flowdiagramapp/test/: admin_test_script.dart  code_generator_phase4_test.dart  comment_node_dialog_test.dart  connector_node_dialog_test.dart  decision_node_dialog_test.dart  input_output_dialog_test.dart  process_node_dialog_test.dart  programming_concepts_test.dart  registration_test.dart  variable_node_dialog_test.dart  widget_test.dart
flowdiagramapp/web/: index.html  manifest.json
flowdiagramapp/windows/: CMakeLists.txt
test_flowcode/: README.md  pubspec.yaml
test_flowcode/lib/: main.dart
test_flowcode/linux/: CMakeLists.txt
test_flowcode/test/: widget_test.dart
test_flowcode/web/: index.html  manifest.json
test_flowcode/windows/: CMakeLists.txt
(+206 files in other folders)
